# capstone

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yaml  launch.json
src/: .gitignore  CMakeLists.txt  CMakePresets.json
src/app/: CMakeLists.txt  app_main.c  i2c_implementation.c  sensirion_hw_i2c_implementation.c  sht4x_driver.c
src/app/bq35100/: bq35100.c  bq35100.h
src/app/sht45/interface/: driver_sht4x_interface.c  driver_sht4x_interface.h
src/app/sht45/src/: driver_sht4x.c  driver_sht4x.h
src/env_sensor_demo/: app_main.c
src/temp_hum/: CMakeLists.txt  app_main.c  sensirion_hw_i2c_implementation.c
